the_project/frontend/manifests/deployment_gke_gat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: frontend
          # image: thomastoumasu/k8s-frontend:3.3-amd # try with localhost, does not seem to work
          # image: thomastoumasu/k8s-frontend:3.3b-amd # first copy IP in Dockerfile
          image: PROJECT/FRONTEND_IMAGE
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-image
              mountPath: /usr/share/nginx/html/shared
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: project
spec:
  type: ClusterIP # for gateway in gke
  selector:
    app: frontend
  ports: # will let TCP traffic from port 1234 to port 80
    - port: 1234
      protocol: TCP
      targetPort: 80
