the_project/frontend/manifests/route_gke.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: project
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - "thomastoumasu.dpdns.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-svc
          port: 1234
